--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,26 @@
 /*  your css code here. If applicable */
+.testimonial-section{
+background-color:#f5f5f5;
+	padding:30px;
+}
+.testimonial{
+	background-color:white;
+	paddind:30px;
+	border: 1px solid #ddd;
+	margin-bottom:15px;
+	border-radius:6px;
+	
+}
+
+.testimonial{
+	background-color:white;
+	padding:15px;
+	border:1px solid #ddd;
+	margin-bottom:15px;
+	border-radius: 6px;
+}
+.author{
+	text-align:right;
+	font-style:italic;
+	font-size:14px;
+}
